    The templates for the questmaker have been updated.
36. Necromancers will now be notified of the deaths of mobs nearby and of other players online.
37. Players will now get a message if they attempt to put on armor outside their class restrictions.  Messages are in lists.ini
38. ShopKeepers can now sell multiple-types of items.  Conflicting types are resolved when set.
39. CommandJournals now support SCRIPT= flag to allow you to scrip entries into your journal.  An example for BUG is included.
40. New Death/Flee consequence: ASTRAL_RES -- same as ASTRAL, but players can use ENTER [body] to self-res.
41. New Area type: StdThinInstance.  Yep, CoffeeMud supports real-life instances now! Check out the Archon Guide for more info.
42. CharClass ability mappings now support "maximum proficiency" values per skill.
43. New un-qualified-for Skill: Flee -- just calls the Flee command, but can be used as a replacement of the command if set up properly.
44. New un-qualified-for Common Skill: ScrollScribing -- inferior to the scribe skill, but ties into metacrafting!
45. Random object generator done.  See HELP GENERATE, and play around with it.  Let me know if this is interesting in any way.
46. EXPORT command now supports single players by name.
47. * I changed the name of a few of the library interfaces, so make sure you follow the 
	part of the upgrade instructions regarding deleting your old "com" directory before 
	running the new build.
48. CoffeeMud-bug values dropped 700 points in overnight debugging.
# Build 5.5.3 Release ?
1. New INI entry: DEFAULTPLAYERFLAGS
2. New DISABLE flag: AUTODISEASE
3. Character classes, and mob stats have been rebalanced along pre-3.0 lines.  
   Thieves and Fighters are most altered classes.  
   Mobs are an average of players now.
   Use RESET MOBSTATS WORLD command to pull your mobs into compliance.  This will, as a side affect, reset all area content to db baseline. 
   