@@ -87,7 +87,7 @@ public class Spell_Dragonfire extends Spell
 					invoker=mob;
 
 					int maxDie =  adjustedLevel(mob,asLevel)+(2*super.getX1Level(mob));
-					int damage = CMLib.dice().roll(maxDie,6,maxDie);
+					int damage = CMLib.dice().roll(maxDie,5,maxDie);
 					if((msg.value()>0)||(msg2.value()>0))
 						damage = (int)Math.round(CMath.div(damage,2.0));
 					CMLib.combat().postDamage(mob,target,this,damage,CMMsg.MASK_ALWAYS|CMMsg.TYP_FIRE,Weapon.TYPE_BURNING,"The dragonfire <DAMAGE> <T-NAME>!");
