@@ -79,7 +79,7 @@ public class Spell_ForkedLightning extends Spell
 					invoker=mob;
 
 					int maxDie=(int)Math.round(CMath.div(adjustedLevel(mob,asLevel)+(2*super.getX1Level(mob)),2.0));
-					int damage = CMLib.dice().roll(maxDie,8,1);
+					int damage = CMLib.dice().roll(maxDie,7,1);
 					if((msg.value()>0)||(msg2.value()>0))
 						damage = (int)Math.round(CMath.div(damage,2.0));
 					if(target.location()==mob.location())
