@@ -71,7 +71,7 @@ public class Spell_ShockingGrasp extends Spell
 					if(msg2.value()<=0)
 					{
 						invoker=mob;
-						int damage = CMLib.dice().roll(1,8,adjustedLevel(mob,asLevel)+(2*super.getX1Level(mob)));
+						int damage = CMLib.dice().roll(1,8,(adjustedLevel(mob,asLevel)+(2*super.getX1Level(mob)))/2);
 						CMLib.combat().postDamage(mob,target,this,damage,CMMsg.MASK_ALWAYS|CMMsg.TYP_ELECTRIC,Weapon.TYPE_STRIKING,auto?"<T-NAME> gasp(s) in shock and pain!":"The shocking grasp <DAMAGE> <T-NAME>!");
 					}
 				}
