@@ -2195,4 +2195,5 @@ Special/Reserved Quest called holidays can be added to/modified on an area-by-ar
    Thieves and Fighters are most altered classes.  
    Mobs are an average of players now.
    Use RESET MOBSTATS WORLD command to pull your mobs into compliance.  This will, as a side affect, reset all area content to db baseline. 
-   
+4. CoffeeMud now supports critical hits for spells and physical damage: high int supports former, and high dex the later.
+5.    
